# redirect_service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
apps/redirect_rules/: admin.py  analytics.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/redirect_rules/migrations/: 0001_initial.py
apps/redirect_rules/tests/: factories.py  test_views.py
apps/redirects/: apps.py  urls.py  views.py
apps/redirects/tests/: test_views.py
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py
core/: settings.py  urls.py
