[project]
name = "redirect-service"
version = "1.0.0"
description = "URL redirect ervice"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "drf-spectacular>=0.27",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "django-redis>=5.4",
    "shortuuid>=1.0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "pytest-django>=4.8",
    "factory-boy>=3.3",
    "Faker>=24.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["apps"]
omit = ["*/tests/*", "*/migrations/*"]
